--- a/Content_ST2.html
+++ b/Content_ST2.html
@@ -10,7 +10,9 @@
 <body>
 
     <video autoplay muted loop class="bg_video"> 
-        <source src="Coralk.mp4" type="video/mp4">
+        <source src="videos/Coralk.mp4" type="video/mp4">
+	<source src="videos/Coralk.webm" type="video/webm">
+	<source src="https://res.cloudinary.com/drw8ltqaz/video/upload/v1766947623/Coralk_k8sypy.mp4" type="video/mp4">
     </video>
 	    <!-- Navbar -->
     <header>
@@ -19,9 +21,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="Home.html">HOME</a></li>
                 <li><a href="Table.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
@@ -110,7 +113,7 @@
 <footer>
     <div class="footer-overlay"></div>
     <video autoplay loop muted>
-        <source src="Shark.mp4" type="video/mp4">
+        <source src="videos/Shark.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 <div class="footer-content">
@@ -128,7 +131,8 @@
             <ul>
                 <li><a href="Home.html">HOME</a></li>
                 <li><a href="Table.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
@@ -148,7 +152,7 @@
             <ul>
                 <li><a href="pageEditor_ST1.html">Student 1</a></li>
                 <li><a href="PageEditor_ST2.html">Student 2</a></li>
-                <li><a href="pageEditor_ST3.html.html">Student 3</a></li>
+                <li><a href="pageEditor_ST3.html">Student 3</a></li>
                 <li><a href="pageediter.html">Student 4</a></li>
             </ul>
         </div>
