--- a/Profile.html
+++ b/Profile.html
@@ -358,7 +358,9 @@ nav ul li a:hover {
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
-        <source src="Shark.mp4" type="video/mp4">
+        <source src="videos/Shark.mp4" type="video/mp4">
+	<source src="videos/Shark.webm" type="video/webm">
+	<source src="https://res.cloudinary.com/drw8ltqaz/video/upload/v1766852029/Shark_cbvfsd.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
     </video>
 
@@ -372,8 +374,8 @@ nav ul li a:hover {
         <nav>
             <ul>
                 <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
 		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
@@ -481,8 +483,9 @@ nav ul li a:hover {
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
@@ -502,7 +505,7 @@ nav ul li a:hover {
             <ul>
                 <li><a href="pageEditor_ST1.html">Student 1</a></li>
                 <li><a href="PageEditor_ST2.html">Student 2</a></li>
-                <li><a href="pageEditor_ST3.html.html">Student 3</a></li>
+                <li><a href="pageEditor_ST3.html">Student 3</a></li>
                 <li><a href="pageediter.html">Student 4</a></li>
             </ul>
         </div>
