--- a/Table.html
+++ b/Table.html
@@ -10,7 +10,10 @@
 <body>
     <!-- Full-Screen Video Background -->
     <video autoplay muted loop id="myVideo">
-        <source src="Shark.mp4" type="video/mp4">
+        <source src="videos/Shark.mp4" type="video/mp4">
+	<source src="https://res.cloudinary.com/drw8ltqaz/video/upload/v1766852029/Shark_cbvfsd.mp4" type="video/mp4">
+	<source src="videos/Shark.webm" type="video/webm">
+
     </video>
 
     <!-- Navbar -->
@@ -21,9 +24,9 @@
         <nav>
             <ul>
                 <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
-				<li><a href="volunteer.html">VOLUNTEER</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
@@ -104,7 +107,7 @@
 <footer>
     <div class="footer-overlay"></div>
     <video autoplay loop muted>
-        <source src="Shark.mp4" type="video/mp4">
+        <source src="videos/Shark.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 <div class="footer-content">
@@ -121,8 +124,9 @@
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
@@ -142,7 +146,7 @@
             <ul>
                 <li><a href="pageEditor_ST1.html">Student 1</a></li>
                 <li><a href="PageEditor_ST2.html">Student 2</a></li>
-                <li><a href="pageEditor_ST3.html.html">Student 3</a></li>
+                <li><a href="pageEditor_ST3.html">Student 3</a></li>
                 <li><a href="pageediter.html">Student 4</a></li>
             </ul>
         </div>
