--- a/Team.html
+++ b/Team.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
-        <source src="7617999-uhd_3840_2160_25fps.mp4" type="video/mp4">
+        <source src="videos/7617999-uhd_3840_2160_25fps.mp4" type="video/mp4">
+	<source src="videos/70796-538877060.webm" type="video/webm">
+	<source src="https://res.cloudinary.com/drw8ltqaz/video/upload/v1766947589/70796-538877060_bcq6jr.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
     </video>
     <!-- Navbar -->
@@ -20,11 +22,13 @@
         <nav>
             <ul>
                 <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
+
             </ul>
         </nav>
     </header>
@@ -89,7 +93,7 @@
 <footer>
     <div class="footer-overlay"></div>
     <video autoplay loop muted>
-        <source src="Shark.mp4" type="video/mp4">
+        <source src="videos/Shark.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 <div class="footer-content">
@@ -106,11 +110,13 @@
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
+
             </ul>
         </div>
         <div class="footer-section">
@@ -127,9 +133,9 @@
             <ul>
                 <li><a href="pageEditor_ST1.html">Student 1</a></li>
                 <li><a href="PageEditor_ST2.html">Student 2</a></li>
-                <li><a href="pageEditor_ST3.html.html">Student 3</a></li>
-                <li><a href="pageediter.html">Student 4</a></li>
-            </ul>
+                <li><a href="pageEditor_ST3.html">Student 3</a></li>
+                <li><a href="pageediter.html">Student 4</a></li>            
+	    </ul>
         </div>
     </div>
 </footer>
