--- a/ValidationSt1.html
+++ b/ValidationSt1.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <video class="video-background" autoplay muted loop>
-        <source src="1409899-uhd_3840_2160_25fps.mp4" type="video/mp4">
+        <source src="videos/70796-538877060.mp4" type="video/mp4">
+	<source src="videos/70796-538877060.webm" type="video/webm">
+	<source src="https://res.cloudinary.com/drw8ltqaz/video/upload/v1766947589/70796-538877060_bcq6jr.mp4" type="video/mp4">
         
     </video>
     <div class="overlay"></div>
@@ -23,8 +25,9 @@
         <nav>
             <ul>
                 <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
@@ -91,21 +94,21 @@
             <!-- Keep only the list items you were responsible to develop, delete the rest and update the links to the corresponding markers -->
             <li class="student">Student 1</li>
                 <ul> 
-                    <li><a href="#splashVal">Splash page validation</a></li>
-                    <li><a href="#volunteerVal">Volunteer page validation</a></li>
-                    <li><a href="#contentVal">Content page validation</a></li>
+                    <li><a href="index.html">Splash page validation</a></li>
+                    <li><a href="volunteer.html">Volunteer page validation</a></li>
+                    <li><a href="content_student1.html">Content page validation</a></li>
                 </ul>
             <li class="student">Student 2 </li>
                 <ul>
-                    <li><a href="#">Home page </a></li>
-                    <li><a href="#">Table page</a></li>
-                    <li><a href="#">Content page</a></li>
+                    <li><a href="Home.html">Home Page</a></li>
+                    <li><a href="Table.html">Table page</a></li>
+                    <li><a href="Content_ST2.html">Content page</a></li>
                 </ul>
             <li class="student">Student 3</li>
                 <ul>
-                    <li><a href="#">Feedback page</a> </li>
-                    <li><a href="#">Team page</a></li>
-                    <li><a href="#">Content page</a></li>
+                    <li><a href="feedback.html">Feedback page</a> </li>
+                    <li><a href="Team.html">Team page</a></li>
+                    <li><a href="content_ST3.html">Content page</a></li>
                 </ul>
             <li class="student">Student 4</li>
                 <ul>
@@ -118,7 +121,7 @@
 <footer>
     <div class="footer-overlay"></div>
     <video autoplay loop muted>
-        <source src="Shark.mp4" type="video/mp4">
+        <source src="videos/Shark.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 <div class="footer-content">
@@ -154,11 +157,11 @@
 		        <div class="footer-section">
             <h3>Page Editors</h3>
             <ul>
-                <li><a href="#">Student 1</a></li>
-                <li><a href="#">Student 2</a></li>
-                <li><a href="#">Student 3</a></li>
-                <li><a href="#">Student 4</a></li>
-            </ul>
+                <li><a href="pageEditor_ST1.html">Student 1</a></li>
+                <li><a href="PageEditor_ST2.html">Student 2</a></li>
+                <li><a href="pageEditor_ST3.html">Student 3</a></li>
+                <li><a href="pageediter.html">Student 4</a></li>            
+	    </ul>
         </div>
     </div>
 </footer>
