--- a/content_page.html
+++ b/content_page.html
@@ -33,13 +33,21 @@
             height: auto;
         }
 
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            gap: 20px;
-        }
+nav {
+    text-align: center;
+    padding: 80px 50px 50px 50px;
+    flex-grow: 1;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 51px;
+    border-radius:50px;
+    margin-top: 22px; 
+    margin-right: 10px;
+}
 
         nav ul li a {
             color: white;
@@ -322,13 +330,13 @@ footer video {
         </div>
         <nav>
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">GALLERY</a></li>
-                <li><a href="#">MEMBERSHIP</a></li>
-                <li><a href="#">FEEDBACK</a></li>
-                <li><a href="#">USER PROFILE</a></li>
-                <li><a href="#">ABOUT US</a></li>
-                <li><a href="#">SITE MAP</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
+                <li><a href="Profile.html">USER PROFILE</a></li>
+                <li><a href="Team.html">ABOUT US</a></li>
+                <li><a href="Sitemap.html">SITE MAP</a></li>
             </ul>
         </nav>
     </header>
@@ -373,12 +381,13 @@ footer video {
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Membership</a></li>
-                <li><a href="#">Feedback</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Site Map</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
+                <li><a href="Profile.html">USER PROFILE</a></li>
+                <li><a href="Team.html">ABOUT US</a></li>
+                <li><a href="Sitemap.html">SITE MAP</a></li>
             </ul>
         </div>
         <div class="footer-section">
@@ -393,11 +402,11 @@ footer video {
 		        <div class="footer-section">
             <h3>Page Editors</h3>
             <ul>
-                <li><a href="#">Student 1</a></li>
-                <li><a href="#">Student 2</a></li>
-                <li><a href="#">Student 3</a></li>
-                <li><a href="#">Student 4</a></li>
-            </ul>
+                <li><a href="pageEditor_ST1.html">Student 1</a></li>
+                <li><a href="PageEditor_ST2.html">Student 2</a></li>
+                <li><a href="pageEditor_ST3.html">Student 3</a></li>
+                <li><a href="pageediter.html">Student 4</a></li>            
+	    </ul>
         </div>
     </div>
 </footer>
