--- a/content_student1.html
+++ b/content_student1.html
@@ -9,7 +9,10 @@
 <body>
 
     <video autoplay muted loop class="bg_video"> 
-        <source src="Background-video.mp4" type="video/mp4">
+        <source src="videos/Background-video.mp4" type="video/mp4">
+	<source src="videos/Background-video.webm" type="video/webm">
+	<source src="https://res.cloudinary.com/drw8ltqaz/video/upload/v1766988437/Background-video_1_ukjari.mp4" type="video/mp4">
+
     </video>
 	    <!-- Navbar -->
     <header>
@@ -18,12 +21,13 @@
         </div>
         <nav>
             <ul>
-                <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
-                <li><a href="#">SITE MAP</a></li>
+                <li><a href="Sitemap.html">SITE MAP</a></li>
             </ul>
         </nav>
     </header>
@@ -83,7 +87,8 @@
 <footer>
     <div class="footer-overlay"></div>
     <video autoplay loop muted>
-        <source src="Shark.mp4" type="video/mp4">
+        <source src="videos/Shark.mp4" type="video/mp4">
+	<source src="https://res.cloudinary.com/drw8ltqaz/video/upload/v1766852029/Shark_cbvfsd.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 <div class="footer-content">
@@ -99,12 +104,13 @@
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
-                <li><a href="#">SITE MAP</a></li>
+                <li><a href="Sitemap.html">SITE MAP</a></li>
             </ul>
         </div>
         <div class="footer-section">
@@ -121,7 +127,7 @@
             <ul>
                 <li><a href="pageEditor_ST1.html">Student 1</a></li>
                 <li><a href="PageEditor_ST2.html">Student 2</a></li>
-                <li><a href="pageEditor_ST3.html.html">Student 3</a></li>
+                <li><a href="pageEditor_ST3.html">Student 3</a></li>
                 <li><a href="pageediter.html">Student 4</a></li>
             </ul>
         </div>
