--- a/pageEditor_ST1.html
+++ b/pageEditor_ST1.html
@@ -14,7 +14,9 @@
     
     <!-- Update the header and the footer to be consistent with the rest of the pages you implemented -->
     <video autoplay muted loop class="bg_video"> 
-        <source src="underwater2_video.mp4" type="video/mp4">
+        <source src="videos/underwater2_video.mp4" type="video/mp4">
+	<source src="https://res.cloudinary.com/drw8ltqaz/video/upload/v1766947642/underwater2_video_yeowxm.mp4" type="video/mp4">
+	<source src="videos/underwater2_video.webm" type="video/webm">
     </video>
     <!-- Navbar -->
     <header>
@@ -24,11 +26,12 @@
         <nav>
             <ul>
                 <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
-                <li><a href="#">SITE MAP</a></li>
+                <li><a href="Sitemap.html">SITE MAP</a></li>
             </ul>
         </nav>
     </header>
@@ -116,7 +119,7 @@
                         <p><a href="validation_ST0.html#splashVal">Click Here</a></p> 
 
                     <h3>Link to the page</h3>
-                        <p><a href="splash.html">Splash Screen</a></p>
+                        <p><a href="index.html">Splash Screen</a></p>
             </section>
 
             <section>
@@ -285,27 +288,27 @@
                 <!-- Keep only the list items you were responsible to develop, delete the rest and update the links to the corresponding markers -->
                 <li>Student 1</li>
                     <ul> 
-                        <li><a href="#splash">Splash page</a></li>
-                        <li><a href="#volunteer">Volunteer page</a></li>
-                        <li><a href="#content">Content page</a></li>
+                        <li><a href="splash.html">Splash page</a></li>
+                        <li><a href="volunteer.html">Volunteer page</a></li>
+                        <li><a href="content_student1.html">Content page</a></li>
                     </ul>
                 <li>Student 2</li>
                     <ul>
-                        <li><a href="#">Home page </a></li>
-                        <li><a href="#">Table page</a></li>
-                        <li><a href="#">Content page</a></li>
+                	<li><a href="Home.html">HOME</a></li>
+                        <li><a href="Table.html">Table page</a></li>
+                        <li><a href="Content_ST2.html">Content page</a></li>
                     </ul>
                 <li>Student 3</li>
                     <ul>
-                        <li><a href="#">Feedback page</a> </li>
-                        <li><a href="#">Team page</a></li>
-                        <li><a href="#">Content page</a></li>
+                        <li><a href="feedback.html">Feedback page</a> </li>
+                        <li><a href="Team.html">Team page</a></li>
+                        <li><a href="content_ST3.html">Content page</a></li>
                     </ul>
                 <li>Student 4</li>
                     <ul>
-                        <li><a href="#">Profile page </a></li>
-                        <li><a href="#">Sitemap page</a></li>
-                        <li><a href="#">Content page</a></li>
+                        <li><a href="Profile.html">Profile page </a></li>
+                        <li><a href="Sitemap.html">Sitemap page</a></li>
+                        <li><a href="content_page">Content page</a></li>
                     </ul>
                 <li><a href="#challenge">Challenges and Lessons Learned</a></li>
                 <li><a href="#compliance">Compliance</a></li>
@@ -317,7 +320,7 @@
 <footer>
     <div class="footer-overlay"></div>
     <video autoplay loop muted>
-        <source src="Shark.mp4" type="video/mp4">
+        <source src="videos/Shark.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 <div class="footer-content">
@@ -333,13 +336,14 @@
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
-                <li><a href="">SITE MAP</a></li>
-            </ul>
+                <li><a href="Sitemap.html">SITE MAP</a></li>
+	    </ul>
         </div>
         <div class="footer-section">
             <h3>Follow Us</h3>
@@ -355,7 +359,7 @@
             <ul>
                 <li><a href="pageEditor_ST1.html">Student 1</a></li>
                 <li><a href="PageEditor_ST2.html">Student 2</a></li>
-                <li><a href="pageEditor_ST3.html.html">Student 3</a></li>
+                <li><a href="pageEditor_ST3.html">Student 3</a></li>
                 <li><a href="pageediter.html">Student 4</a></li>
             </ul>
         </div>
