--- a/pageediter.html
+++ b/pageediter.html
@@ -183,15 +183,14 @@ nav ul li a:hover {
             z-index: -1;
         }
         /* Footer Styles */
-footer {
-    position: relative;
-    width: 100%;
-    background-color: rgba(51, 51, 51, 0.9); /* Semi-transparent background */
-    color: white;
-    padding: 20px 0;
-    margin-top: 40px; /* Add space above the footer */
-    overflow: hidden; /* Ensure video doesn't overflow */
-}
+		footer {
+			position: relative;
+			width: 100%;
+			height: 400px; /* Adjust height as needed */
+			overflow: hidden;
+			margin-top: 100px; /* Push footer below content */
+			z-index: 2;
+		}
 
 footer video {
     position: absolute;
@@ -200,48 +199,85 @@ footer video {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: -1; /* Place the video behind the content */
+    filter: blur(12px);  /* Apply blur effect to the video */
+    z-index: -1;
 }
 
-.footer-overlay {
+
+	.footer-content {
+        position: relative;
+		bottom: 50px;
+		left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+        color: white;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        background: rgba(0, 0, 0,0); /* Semi-transparent background for readability */
+        padding: 30px ;
+		backdrop-filter: none; 
+    }
+
+    .footer-section {
+		font-family: 'Poppins';
+		font-style: normal;
+        margin: 10px;
+		font-weight: bold;
+		font-size: 25px;
+    }
+
+    .footer-section h3 {
+        margin-bottom: 10px;
+    }
+
+    .footer-section ul {
+        list-style: none;
+        padding: 0;
+    }
+
+    .footer-section ul li {
+        margin: 5px 0;
+    }
+
+    .footer-section ul li a {
+        color: white;
+        text-decoration: none;
+
+    }
+
+    .footer-section ul li a:hover {
+        text-decoration: underline;
+        color: cyan;
+        border-bottom: 2px solid cyan;
+        border-radius: 55px;
+        }
+		
+
+
+	.footer-overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Dark overlay for better readability */
-    z-index: 0;
+    background-color: rgba(0, 91, 255, 0.71); /* Semi-transparent blue */
+    z-index: -1;
 }
-
-.footer-content {
-    position: relative;
-    z-index: 1; /* Ensure content is above the video and overlay */
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
 .footer-section {
-    flex: 1;
-    min-width: 200px;
-    margin: 10px;
-    padding: 10px;
-    text-align: center;
+    flex: 1;  /* Allow sections to take equal width */
+    min-width: 250px;  /* Ensure sections don't get too narrow on small screens */
+    margin-top: 20px;
 }
 
 .footer-section h3 {
     margin-bottom: 15px;
-    font-size: 18px;
-    color: #fff;
 }
 
 .footer-section ul {
     list-style: none;
-    padding: 0;
-    margin: 0;
+    padding: 5px;
 }
 
 .footer-section ul li {
@@ -249,33 +285,52 @@ footer video {
 }
 
 .footer-section ul li a {
-    color: #fff;
+    color: white;
     text-decoration: none;
-    transition: color 0.3s ease;
 }
 
 .footer-section ul li a:hover {
-    color: #007bff; /* Highlight color on hover */
+    text-decoration: underline;
+    color: cyan;
 }
+
+.footer-section:nth-child(3) h3 {
+    margin-left: -250px; /* Adjust this value to move the heading to the left */
+}
+
+.footer-section .elements a {
+    color: white;
+    text-decoration: none; /* Remove default underline */
+    font-size: 16px;
+}
+
+.footer-section .elements a:hover {
+    text-decoration: underline;
+    color: cyan;
+    border-bottom: 2px solid cyan;
+    border-radius: 55px;
+}
+
 
 .social-icons {
     display: flex;
-    justify-content: center;
-    gap: 15px;
-}
-
-.social-icons li {
+    gap: 20px;
+    padding: 0;
     list-style: none;
 }
 
-.social-icons a {
-    color: #fff;
-    font-size: 20px;
-    transition: color 0.3s ease;
+.social-icons li {
+    display: inline;
 }
 
-.social-icons a:hover {
-    color: #007bff; /* Highlight color on hover */
+.social-icons li a {
+    color: white;
+    font-size: 30px;
+    text-decoration: none;
+}
+
+.social-icons li a:hover {
+    color: cyan;
 }
 
 .elements {
@@ -300,7 +355,9 @@ footer video {
 <body>
     <!-- Full-Screen Video Background -->
     <video autoplay muted loop id="myVideo">
-        <source src="Shark.mp4" type="video/mp4">
+        <source src="videos/Shark.mp4" type="video/mp4">
+	<source src="videos/Shark.webm" type="video/webm">
+	<source src="https://res.cloudinary.com/drw8ltqaz/video/upload/v1766852029/Shark_cbvfsd.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
     </video>
 
@@ -311,9 +368,10 @@ footer video {
         </div>
         <nav>
             <ul>
-                <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
@@ -340,7 +398,7 @@ footer video {
                 <p><a href="validation_ST0.html#splashVal">Include a link to the validation page</a>, use the marker to jump to the corresponding section of the validation page.</p>
 
                 <h3>Link to the page</h3>
-                <p><a href="splash.html">Include a link to the actual page you describe.</a></p>
+                <p><a href="index.html">Include a link to the actual page you describe.</a></p>
             </section>
 
             <!-- Other sections remain unchanged -->
@@ -351,27 +409,27 @@ footer video {
             <ul class="top-level-ul">
                 <li>Student 1</li>
                 <ul> 
-                    <li><a href="#splash">Splash page</a></li>
-                    <li><a href="#volunteer">Volunteer page</a></li>
-                    <li><a href="#content">Content page</a></li>
+                    <li><a href="splash.html">Splash page</a></li>
+                    <li><a href="volunteer.html">Volunteer page</a></li>
+                    <li><a href="content_student1.html">Content page</a></li>
                 </ul>
                 <li>Student 2</li>
                 <ul>
-                    <li><a href="#">Home page</a></li>
-                    <li><a href="#">Table page</a></li>
-                    <li><a href="#">Content page</a></li>
+                    <li><a href="Home.html">Home page</a></li>
+                    <li><a href="Table.html">Table page</a></li>
+                    <li><a href="Content_ST2.html">Content page</a></li>
                 </ul>
                 <li>Student 3</li>
                 <ul>
-                    <li><a href="#">Feedback page</a></li>
-                    <li><a href="#">Team page</a></li>
-                    <li><a href="#">Content page</a></li>
+                    <li><a href="feedback.html">Feedback page</a></li>
+                    <li><a href="Team.html">Team page</a></li>
+                    <li><a href="Content_ST3.html">Content page</a></li>
                 </ul>
                 <li>Student 4</li>
                 <ul>
-                    <li><a href="#">Profile page</a></li>
-                    <li><a href="#">Sitemap page</a></li>
-                    <li><a href="#">Content page</a></li>
+                    <li><a href="Profile.html">Profile page</a></li>
+                    <li><a href="Sitemap.html">Sitemap page</a></li>
+                    <li><a href="content_page.html">Content page</a></li>
                 </ul>
                 <li><a href="#challenge">Challenges and Lessons Learned</a></li>
                 <li><a href="#compliance">Compliance</a></li>
@@ -383,7 +441,7 @@ footer video {
     <footer>
         <div class="footer-overlay"></div>
         <video autoplay loop muted>
-            <source src="Shark.mp4" type="video/mp4">
+            <source src="videos/Shark.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="footer-content">
@@ -399,12 +457,13 @@ footer video {
             <div class="footer-section">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Membership</a></li>
-                    <li><a href="#">Feedback</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Site Map</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
+                <li><a href="Profile.html">USER PROFILE</a></li>
+                <li><a href="Team.html">ABOUT US</a></li>
+                <li><a href="Sitemap.html">SITE MAP</a></li>
                 </ul>
             </div>
             <div class="footer-section">
@@ -419,10 +478,10 @@ footer video {
             <div class="footer-section">
                 <h3>Page Editors</h3>
                 <ul>
-                    <li><a href="#">Student 1</a></li>
-                    <li><a href="#">Student 2</a></li>
-                    <li><a href="#">Student 3</a></li>
-                    <li><a href="#">Student 4</a></li>
+                    <li><a href="pageEditor_ST1.html">Student 1</a></li>
+                    <li><a href="PageEditor_ST2.html">Student 2</a></li>
+                    <li><a href="pageEditor_ST3.html">Student 3</a></li>
+                    <li><a href="pageediter.html">Student 4</a></li>
                 </ul>
             </div>
         </div>
