--- a/validation.html
+++ b/validation.html
@@ -143,7 +143,7 @@
 			list-style: none;
 			display: flex;
 			justify-content: center;
-			gap: 51px;
+			gap: 49px;
 			border-radius:50px;
 		}
 
@@ -322,8 +322,9 @@
         <nav>
             <ul>
                 <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
@@ -369,27 +370,27 @@
             <ul class="top-level-ul">
                 <li>Student 1</li>
                 <ul> 
-                    <li><a href="#splashVal">Splash page validation</a></li>
-                    <li><a href="#volunteerVal">Volunteer page validation</a></li>
-                    <li><a href="#contentVal">Content page validation</a></li>
+                    <li><a href="index.html">Splash page validation</a></li>
+                    <li><a href="volunteer.html">Volunteer page validation</a></li>
+                    <li><a href="content_student1.html">Content page validation</a></li>
                 </ul>
                 <li>Student 2</li>
                 <ul>
-                    <li><a href="#">Home page </a></li>
-                    <li><a href="#">Table page</a></li>
-                    <li><a href="#">Content page</a></li>
+                    <li><a href="Home.html">HOME</a></li>
+                    <li><a href="Table.html">Table page</a></li>
+                    <li><a href="Content_ST2.html">Content page</a></li>
                 </ul>
                 <li>Student 3</li>
                 <ul>
-                    <li><a href="#">Feedback page</a></li>
-                    <li><a href="#">Team page</a></li>
-                    <li><a href="#">Content page</a></li>
+                    <li><a href="feedback.html">Feedback page</a></li>
+                    <li><a href="Team.html">Team page</a></li>
+                    <li><a href="Content_ST3.html">Content page</a></li>
                 </ul>
                 <li>Student 4</li>
                 <ul>
-                    <li><a href="#profilePage">Profile page</a></li>  <!-- Updated link -->
-                    <li><a href="#sitemapPage">Sitemap page</a></li>  <!-- Updated link -->
-                    <li><a href="#contentPage">Content page</a></li>  <!-- Updated link -->
+                    <li><a href="Profile.html">Profile page</a></li>  <!-- Updated link -->
+                    <li><a href="Sitemap.html">Sitemap page</a></li>  <!-- Updated link -->
+                    <li><a href="content_Page.html">Content page</a></li>  <!-- Updated link -->
                 </ul>
             </ul>
         </aside>
@@ -398,7 +399,7 @@
 <footer>
     <div class="footer-overlay"></div>
     <video autoplay loop muted>
-        <source src="Shark.mp4" type="video/mp4">
+        <source src="videos/Shark.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 <div class="footer-content">
@@ -415,8 +416,9 @@
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
