--- a/validation_ST2.html
+++ b/validation_ST2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Validation- Student1</title>
+    <title>Validation- Student2</title>
     <link rel="stylesheet" href="Validation_ST2.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	
@@ -12,8 +12,8 @@
 </head>
 <body>
     <video class="video-background" autoplay muted loop>
-        <source src="JELLY.mp4" type="video/mp4">
-        
+        <source src="videos/JELLY.mp4" type="video/mp4">
+	<source src="videos/JELLY.webm" type="video/webm">
     </video>
     <div class="overlay"></div>
     <header>
@@ -22,10 +22,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
-				<li><a href="volunteer.html">VOLUNTEER</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
@@ -92,34 +92,34 @@
             <!-- Keep only the list items you were responsible to develop, delete the rest and update the links to the corresponding markers -->
             <li class="student">Student 1</li>
                 <ul> 
-                    <li><a href="#splashVal">Splash page validation</a></li>
-                    <li><a href="#volunteerVal">Volunteer page validation</a></li>
-                    <li><a href="#contentVal">Content page validation</a></li>
+                    <li><a href="index.html">Splash page validation</a></li>
+                    <li><a href="volunteer.html">Volunteer page validation</a></li>
+                    <li><a href="content_student1.html">Content page validation</a></li>
                 </ul>
             <li class="student">Student 2 </li>
                 <ul>
-                    <li><a href="#">Home page </a></li>
-                    <li><a href="#">Table page</a></li>
-                    <li><a href="#">Content page</a></li>
+                    <li><a href="Home.html">Home page </a></li>
+                    <li><a href="Table.html">Table page</a></li>
+                    <li><a href="Content_ST2.html">Content page</a></li>
                 </ul>
             <li class="student">Student 3</li>
                 <ul>
-                    <li><a href="#">Feedback page</a> </li>
-                    <li><a href="#">Team page</a></li>
-                    <li><a href="#">Content page</a></li>
+                    <li><a href="feedback.html">Feedback page</a> </li>
+                    <li><a href="Team.html">Team page</a></li>
+                    <li><a href="content_ST3.html">Content page</a></li>
                 </ul>
             <li class="student">Student 4</li>
                 <ul>
-                    <li><a href="#">Profile page </a></li>
-                    <li><a href="#">Sitemap page</a></li>
-                    <li><a href="#">Content page</a></li>
+                    <li><a href="Profile.html">Profile page </a></li>
+                    <li><a href="Sitemap.html">Sitemap page</a></li>
+                    <li><a href="content_page.html">Content page</a></li>
                 </ul>
         </ul>
     </aside>
 <footer>
     <div class="footer-overlay"></div>
     <video autoplay loop muted>
-        <source src="Shark.mp4" type="video/mp4">
+        <source src="videos/Shark.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 <div class="footer-content">
@@ -135,9 +135,10 @@
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
