--- a/volunteer.html
+++ b/volunteer.html
@@ -14,13 +14,13 @@
   </div>
   <nav>
       <ul>
-          <li><a href="Home.html">HOME</a></li>
-          <li><a href="able.html">MEMBERSHIP</a></li>
-          <li><a href="feedback.html.html">FEEDBACK</a></li>
-          <li><a href="volunteer.html">VOLUNTEER</a></li>
-          <li><a href="Profile.html">USER PROFILE</a></li>
-          <li><a href="Team.html">ABOUT US</a></li>
-          <li><a href="Sitemap.html">SITE MAP</a></li>
+                <li><a href="Home.html">HOME</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
+                <li><a href="Profile.html">USER PROFILE</a></li>
+                <li><a href="Team.html">ABOUT US</a></li>
+                <li><a href="Sitemap.html">SITE MAP</a></li>
           
       </ul>
   </nav>
@@ -215,7 +215,7 @@
           </div>
           
           <div>
-              <img src="Images/fees.png" alt="icon">
+              <img src="fees.png" alt="icon">
               <p>Program Fees from £320</p>
           </div>
         </div>
@@ -320,7 +320,9 @@
 </div>
 
 <video autoplay muted loop class="bg_video"> 
-  <source src="background.mp4" type="video/mp4">
+  <source src="videos/background.mp4" type="video/mp4">
+  <source src="https://res.cloudinary.com/drw8ltqaz/video/upload/v1766947842/background_hx37kk.mp4" type="video/mp4">
+  <source src="videos/Background-video.webm" type="video/webm">
 </video>
 <div class="bg_overlay"></div>
 
@@ -329,7 +331,7 @@
 <footer>
     <div class="footer-overlay"></div>
     <video autoplay loop muted>
-        <source src="Shark.mp4" type="video/mp4">
+        <source src="videos/Shark.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 <div class="footer-content">
@@ -345,9 +347,10 @@
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
-                <li><a href="feedback.html.html">FEEDBACK</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
+                <li><a href="feedback.html">FEEDBACK</a></li>
+		<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
                 <li><a href="Sitemap.html">SITE MAP</a></li>
@@ -362,12 +365,12 @@
                 <li><a href="https://www.linkedin.com/in/husni-atham-22b80432a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BSljn%2BDHPTFOr13rGdimLgA%3D%3D" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             </ul>
         </div>
-		        <div class="footer-section">
+	<div class="footer-section">
             <h3>Page Editors</h3>
             <ul>
                 <li><a href="pageEditor_ST1.html">Student 1</a></li>
                 <li><a href="PageEditor_ST2.html">Student 2</a></li>
-                <li><a href="pageEditor_ST3.html.html">Student 3</a></li>
+                <li><a href="pageEditor_ST3.html">Student 3</a></li>
                 <li><a href="pageediter.html">Student 4</a></li>
             </ul>
         </div>
